<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="8dp" />
    	

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_absrtract"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_inititl"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginTop="8dp"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_inicontent1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_inicontent2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_infotitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginTop="8dp"
         />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_founder"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp" />

</LinearLayout>